# FARM-boilerpalte

./: docker-compose.yaml  temp.txt
backend/: Dockerfile  docker-compose.yaml  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/: start.py
backend/app/core/: config.py
frontend/: .env  package-lock.json
frontend/src/: App.js
